fix: logo center-aligned in the left nav-bar

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -57,3 +57,7 @@ $FreestyleGuide-color--background: $background
   display: flex
   justify-content: space-around
   align-items: center
+
+.logo-img
+  margin: 0 auto
+  width: 100%
